Solves the problem of header being cut off.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,7 @@
  *= require_tree .
  *= require jquery.mobile
  */
+
+ .ui-title {
+     margin: 0.6em 10% 0.8em !important;
+ }
